# BaconAndEggs

./: .env.example  .gitignore  CMakeLists.txt  Makefile  README.md  bacon_and_eggs.c  lwipopts.h
src/: config.c  config.h  discovery.c  discovery.h  http_server.c  main.c  mdns_setup.c  mdns_setup.h  mqtt_client.c  mqtt_client.h  scheduler.c  scheduler.h  tcp_cmd.c  tcp_cmd.h  util.c  util.h  webhook.c  webhook.h  wol.c  wol.h
tools/: makefsdata.py
web/: app.js  index.html  style.css
